fix: support checked moves on FUSE
